--- a/index.html
+++ b/index.html
@@ -10,6 +10,47 @@
 </head>
 
 <body>
+    <!-- copa America -->
+    <section class="amr">
+        <div class="yy">
+            <h1>Conmebol <br>Copa America <br> 2021</h1>
+            <a class="link-button" href="https://www.youtube.com/">Watch Live </a>
+
+        </div>
+        <div class="yy">
+            <img src="images/banner.png">
+        </div>
+    </section>
+    <br>
+    <br>
+    <!-- players -->
+
+    <div class="hh">
+        <img src="images/players/player-1.png">
+    </div>
+    <div class="kk">
+        <h3 class="name">Naymer Jr</h3>
+        <p> Naymer Jr is very clever player.He born in Brasil.</p>
+    </div>
+    <div class="hh">
+        <img src="images/players/player-2.png">
+    </div>
+    <div class="kk">
+        <h3 class="name">Lionel Messi</h3>
+        <p> Lionel Messi is very clever player.He born in Airgentina.</p>
+    </div>
+    <div class="hh">
+        <img src="images/players/player-3.png">
+    </div>
+    <div class="kk">
+        <h3 class="name">Cristiano Ronaldo</h3>
+        <p> Cristiano Ronaldo is very clever player.He born in Portugal.</p>
+    </div>
+
+
+
+
+
 
 </body>
 
