--- a/index.html
+++ b/index.html
@@ -24,31 +24,136 @@
     <br>
     <br>
     <!-- players -->
+    <section class="bangladesh">
+        <div class="players">
+            <div class="player">
+                <div class="player-title">
+                    <img src="images/players/player-1.png" alt="">
+                </div>
+                <div class="player-info">
+                    <h3>Naymer Jr</h3>
+                    <p> Naymer is very stylist player in the world.<br>He born in brasil.
+                        Her skill is very telented.
+                    </p>
+                </div>
+            </div>
+            <div class="player">
+                <div class="player-title">
+                    <img src="images/players/player-2.png" alt="">
+                </div>
+                <div class="player-info">
+                    <h3>Lionel Messi</h3>
+                    <p> Lionel Messi very stylist player in the world.<br>He born in Argentina.
+                        Her skill is very telented.
+                    </p>
+                </div>
+            </div>
+            <div class="player">
+                <div class="player-title">
+                    <img src="images/players/player-3.png" alt="">
+                </div>
+                <div class="player-info">
+                    <h3>Cristiano Rolandho</h3>
+                    <p> Cristiano Ronaldho very stylist player in the world.<br>He born in Fortogal.
+                        Her skill is very telented.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <br>
 
-    <div class="hh">
-        <img src="images/players/player-1.png">
-    </div>
-    <div class="kk">
-        <h3 class="name">Naymer Jr</h3>
-        <p> Naymer Jr is very clever player.He born in Brasil.</p>
-    </div>
-    <div class="hh">
-        <img src="images/players/player-2.png">
-    </div>
-    <div class="kk">
-        <h3 class="name">Lionel Messi</h3>
-        <p> Lionel Messi is very clever player.He born in Airgentina.</p>
-    </div>
-    <div class="hh">
-        <img src="images/players/player-3.png">
-    </div>
-    <div class="kk">
-        <h3 class="name">Cristiano Ronaldo</h3>
-        <p> Cristiano Ronaldo is very clever player.He born in Portugal.</p>
-    </div>
+    <!-- players2 -->
+    <section class="bangladesh2">
+        <div class="players">
+            <div class="player">
+                <div class="player-title">
+                    <img src="images/players/player-4.png" alt="">
+                </div>
+                <div class="player-info">
+                    <h3>Paulo Dybala</h3>
+                    <p>Paulo Dybala
+                        very stylist player in the world.<br>He born in Argentina.
+                        Her skill is very telented.
+                    </p>
+                </div>
+            </div>
+            <div class="player">
+                <div class="player-title">
+                    <img src="images/players/player-5.png" alt="">
+                </div>
+                <div class="player-info">
+                    <h3>Mesut Ozil</h3>
+                    <p>Mesut Ozil very stylist player in the world.<br>He born in Germany.
+                        Her skill is very telented.
+                    </p>
+                </div>
+            </div>
+            <div class="player">
+                <div class="player-title">
+                    <img src="images/players/player-6.png" alt="">
+                </div>
+                <div class="player-info">
+                    <h3>Mauro Icardi</h3>
+                    <p>Mauro Icardi very stylist player in the world.<br>He born in Argentina.
+                        Her skill is very telented.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- players3 -->
 
+    <section class="bangladesh3">
+        <div class="players">
+            <div class="player">
+                <div class="player-title">
+                    <img src="images/players/player-7.png" alt="">
+                </div>
+                <div class="player-info">
+                    <h3>Di Maria</h3>
+                    <p>Di Maria
+                        very stylist player in the world.<br>He born in Argentina.
+                        Her skill is very telented.
+                    </p>
+                </div>
+            </div>
+            <div class="player">
+                <div class="player-title">
+                    <img src="images/players/player-8.png" alt="">
+                </div>
+                <div class="player-info">
+                    <h3>Kyllan Mbappa</h3>
+                    <p>Kyllan Mbappa very stylist player in the world.<br>He born in France.
+                        Her skill is very telented.
+                    </p>
+                </div>
+            </div>
+            <div class="player">
+                <div class="player-title">
+                    <img src="images/players/player-9.png" alt="">
+                </div>
+                <div class="player-info">
+                    <h3>Mohammed Salah</h3>
+                    <p>Mohammed Salah very stylist player in the world.<br>He born in Uman.
+                        Her skill is very telented.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- highilight -->
+    <br>
+    <section>
+        <div class="highilight">
+            <h2>All Highilight <br>Copa America 2021</h2>
+            <a class="link-button" href="https://www.youtube.com/"> Watch Now </a>
 
-
+        </div>
+        <div class="copa">
+            <img src="images/match.png">
+        </div>
+    </section>
 
 
 
