--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -102,6 +103,8 @@
             </div>
         </div>
     </section>
+    <br>
+
     <!-- players3 -->
 
     <section class="bangladesh3">
@@ -144,7 +147,7 @@
     </section>
     <!-- highilight -->
     <br>
-    <section>
+    <section class="highilight2">
         <div class="highilight">
             <h2>All Highilight <br>Copa America 2021</h2>
             <a class="link-button" href="https://www.youtube.com/"> Watch Now </a>
@@ -154,6 +157,13 @@
             <img src="images/match.png">
         </div>
     </section>
+    <br>
+    <footer class="oo">
+
+        <i>Football</i>
+    </footer>
+
+
 
 
 
